--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "darindra23",
-    "password": "wadidaw",
+    "username": "postgres",
+    "password": "postgres",
     "database": "yahoot",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
