--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "darindra23",
+    "password": "wadidaw",
     "database": "yahoot",
     "host": "localhost",
     "dialect": "postgres"
